<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookingActivity">

    <TextView
        android:id="@+id/book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Book Your Electronic Repairing Here !!"
        android:textSize="20sp"
        android:textColor="#800000"
        android:gravity="center"
        android:layout_marginTop="10sp"
        />

    <EditText
        android:id="@+id/cfullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Full Name"

        />


    <EditText
        android:id="@+id/ccontact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="Contact Number"

        />

    <EditText
        android:id="@+id/clocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Your Location"

        />

    <EditText
        android:id="@+id/cproblem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Problems"

        />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Select Date and Time"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btncdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonblue"
            android:text="Select Date "
            android:textColorHint="#000000" />


        <Button
            android:id="@+id/btnctime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:background="@drawable/buttonblue"
            android:text="Select Time "
            android:textColorHint="#000000" />


    </LinearLayout>

    <Button
        android:id="@+id/btncbook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:background="@drawable/buttonblue"
        android:hint="Book Now"
        android:textColorHint="#800000"
        android:textSize="20sp"

        />

</LinearLayout>